--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -1,9 +1,20 @@
 /* Header */
+header { border: 1px solid; width: 100%; min-height: 100px; }
+
 /* Contents */
-#container { margin: 0 auto; width: 1000px; }
+#container { margin: 30px auto; width: 1000px; }
+#container section.projectList { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px 0 20px; width: 100%; }
+#container section.projectList .project-item { margin-right: 10px; margin-bottom: 10px; border: 1px solid; height: 250px; }
+@media (min-width: 320px) { #container section.projectList .project-item { width: 100%; } }
+@media (min-width: 768px) { #container section.projectList .project-item { width: 240px; } }
+#container section.projectList .project-item:nth-child(4n) { margin-right: 0; }
+#container section.projectList .project-item figure img { width: 100%; height: 170px; }
+#container section.projectList .project-item figure figcaption { margin-top: 20px; text-align: center; }
 #container #clone .clone { background: url("../images/img-git-01.png") no-repeat; height: 400px; }
 
 /* Footer */
+footer { border: 1px solid; width: 100%; min-height: 100px; }
+
 /* Button */
 /* Bullet */
 /* Common */
@@ -11,7 +22,7 @@ h1 { font-size: 32px; }
 
 h2 { margin-bottom: 15px; padding: 15px 0; border-bottom: 2px solid #000000; font-size: 30px; font-weight: 600; }
 
-h3 { font-size: 28px; }
+h3 { display: inline-block; margin: 5px 0; padding: 5px 20px; background: #333333; font-size: 28px; color: #ffffff; }
 
 h4 { font-size: 26px; }
 
