--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -19,7 +19,12 @@ h2{
     }
 }
 h3{
+    display: inline-block;
+    margin: 5px 0;
+    padding: 5px 20px;
+    background: $h3;
     font-size: 28px;
+    color: $white;
 }
 h4{
     font-size: 26px;
