--- a/guideLine/assets/sass/layout/_contents.scss
+++ b/guideLine/assets/sass/layout/_contents.scss
@@ -6,9 +6,46 @@
 
 /* Contents */
 #container{
-    margin: 0 auto;
+    margin: 30px auto;
     width: 1000px;
 
+    section{
+        &.projectList{
+            display: flex;
+            flex-wrap: wrap;
+            margin: 10px 0 20px;
+            width: 100%;
+
+            .project-item{
+                margin-right: 10px;
+                margin-bottom: 10px;
+                border:1px solid;
+
+                @media (min-width: 320px){
+                    width: 100%;
+                }
+
+                @media (min-width: 768px){
+                    width: 240px;
+                }
+                height: 250px;
+
+                &:nth-child(4n){
+                    margin-right: 0;
+                }
+                figure{
+                    img{
+                        width: 100%;
+                        height: 170px;
+                    }
+                    figcaption{
+                        margin-top: 20px;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
     #clone{
         .clone{
             @include imagePush;
