### 2021.03.10 - [index.html] header부분 메뉴등 레이아웃 작업 - [index.html] quick 영역, slide 영역 프로토 작업 - [jquery.html] 신규페이지 생성 및 컨텐츠 업데이트 - [htm.html] 컨텐츠 업데이트

--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -41,3 +41,11 @@ ol{
     left: 30px;
     list-style: decimal-leading-zero;  
 }
+
+xmp,
+.explanation-box{
+    padding: 10px 20px;
+    border: 1px solid;
+    width: 100%;
+    box-sizing: border-box;
+}
