--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -1,7 +1,14 @@
 /* Header */
-header { border: 1px solid; width: 100%; min-height: 100px; }
+header { position: -webkit-sticky; position: sticky; border: 1px solid; background: #ffffff; top: 0; height: 100px; }
+header section { margin: 0 auto; width: 1000px; height: 100px; line-height: 100px; }
+header section h1 { display: inline-block; }
+header section nav#menuList { display: -webkit-box; display: -ms-flexbox; display: flex; width: 70%; float: right; }
+header section nav#menuList div { width: 120px; text-align: center; }
+header section aside.Quick { position: fixed; border: 1px solid; width: 100px; height: 200px; bottom: 0; right: 0; }
 
 /* Contents */
+#sliderContainer { border: 1px solid; width: 100%; height: 400px; }
+
 #container { margin: 30px auto; width: 1000px; }
 #container section.projectList { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px 0 20px; width: 100%; }
 #container section.projectList .project-item { margin-right: 10px; margin-bottom: 10px; border: 1px solid; height: 250px; }
@@ -31,6 +38,8 @@ h5 { font-size: 24px; }
 h6 { font-size: 22px; }
 
 ol { position: relative; left: 30px; list-style: decimal-leading-zero; }
+
+xmp, .explanation-box { padding: 10px 20px; border: 1px solid; width: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 /* Form */
 /* Table */
