--- a/guideLine/assets/sass/layout/_contents.scss
+++ b/guideLine/assets/sass/layout/_contents.scss
@@ -5,6 +5,11 @@
 // ----------------------------*
 
 /* Contents */
+#sliderContainer{
+    border: 1px solid;
+    width: 100%;
+    height: 400px;
+}
 #container{
     margin: 30px auto;
     width: 1000px;
