--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -5,6 +5,44 @@
 // ----------------------------*
 
 /* Common */
+/* Font-face */
+@font-face {
+    font-family: 'Nanum Gothic';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/NanumGothic-Regular.eot');
+    src: url('../fonts/NanumGothic-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/NanumGothic-Regular.woff2') format('woff2'),
+         url('../fonts/NanumGothic-Regular.woff') format('woff'),
+         url('../fonts/NanumGothic-Regular.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Nanum Gothic';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/NanumGothic-Bold.eot');
+    src: url('../fonts/NanumGothic-Bold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/NanumGothic-Bold.woff2') format('woff2'),
+         url('../fonts/NanumGothic-Bold.woff') format('woff'),
+         url('../fonts/NanumGothic-Bold.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Nanum Gothic';
+    font-style: normal;
+    font-weight: 800;
+    src: url('../fonts/NanumGothic-ExtraBold.eot');
+    src: url('../fonts/NanumGothic-ExtraBold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/NanumGothic-ExtraBold.woff2') format('woff2'),
+         url('../fonts/NanumGothic-ExtraBold.woff') format('woff'),
+         url('../fonts/NanumGothic-ExtraBold.ttf') format('truetype');
+  }
+   
+body, table, div, p {
+    font-family:'Nanum Gothic';
+    font-size: 16px;
+}
+
+/* H tag */
 h1{
     font-size: 32px;
 }
@@ -21,9 +59,9 @@ h2{
 h3{
     display: inline-block;
     margin: 5px 0;
-    padding: 5px 20px;
+    padding: 10px 20px;
     background: $h3;
-    font-size: 28px;
+    font-size: 18px;
     color: $white;
 }
 h4{
@@ -44,8 +82,11 @@ ol{
 
 xmp,
 .explanation-box{
+    margin: 15px 0;
     padding: 10px 20px;
     border: 1px solid;
     width: 100%;
     box-sizing: border-box;
 }
+
+.bold{font-weight: 900;color: brown;}
