--- a/guideLine/html/layout/footer.html
+++ b/guideLine/html/layout/footer.html
@@ -1,1 +1,11 @@
-xptmxm
+<section>
+    <article>
+        Copyrights &copy; 2018-2021 SeWoong, All Rights Reserved.
+    </article>
+    <article>
+        <ul>
+            <li><a href="tel:010-4263-1501" target="_self">  010-4263-1501 </a></li>
+            <li>메일보내기</li>
+        </ul>
+    </article>
+</section>
