--- a/pyeongtaek/assets/sass/base/_variableList.scss
+++ b/pyeongtaek/assets/sass/base/_variableList.scss
@@ -5,7 +5,10 @@
 // ----------------------------*
 $white : #ffffff;
 $gray  : #cccccc;
-$black : #000000;
+$black : #020210;
 $red   : #ff0000;
-
-$h3    : #333333;
+$bgGray: #f6f6f6;
+$fontGray6:#666666;
+$fontGray9: #999999;
+$blue : #0051A3;
+$fontHover: #0075C1;
