--- a/pyeongtaek/assets/sass/components/_common.scss
+++ b/pyeongtaek/assets/sass/components/_common.scss
@@ -3,6 +3,5 @@
 // *----------------------------
 //	Common
 // ----------------------------*
-
 /* Common */
-/* Font-face */
+a:link, a:visited, a:hover{text-decoration: none;}
