--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -8,6 +8,14 @@ header section aside.Quick { position: fixed; border: 1px solid; width: 100px; h
 
 /* Contents */
 #sliderContainer { border: 1px solid; width: 100%; height: 400px; }
+#sliderContainer .post-wrapper .post { font-size: 40px; font-weight: 700; }
+@media (min-width: 320px) { #sliderContainer .post-wrapper .post { width: 100%; height: 30vh; } }
+@media (min-width: 768px) { #sliderContainer .post-wrapper .post { width: 1920px; height: 400px; } }
+#sliderContainer .post-wrapper .post:nth-child(2) { color: red; }
+#sliderContainer .post-wrapper .post:nth-child(3) { color: green; }
+#sliderContainer .post-wrapper .post:nth-child(4) { color: blue; }
+#sliderContainer .post-wrapper .post:nth-child(5) { color: orange; }
+#sliderContainer .post-wrapper .post:nth-child(6) { color: black; }
 
 #container { margin: 30px auto; width: 1000px; }
 #container section.projectList { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px 0 20px; width: 100%; }
