--- a/guideLine/assets/sass/layout/_contents.scss
+++ b/guideLine/assets/sass/layout/_contents.scss
@@ -9,7 +9,43 @@
     border: 1px solid;
     width: 100%;
     height: 400px;
+
+    .post-wrapper{
+        .post{
+            font: {
+                size: 40px;
+                weight: 700;
+            }
+
+            @media (min-width: 320px){
+                width: 100%;
+                height: 30vh;
+            }
+    
+            @media (min-width: 768px){
+                width: 1920px;
+                height: 400px;                        
+            }
+    
+            &:nth-child(2){
+                color: red;
+            }
+            &:nth-child(3){
+                color: green;
+            }
+            &:nth-child(4){
+                color: blue;
+            }
+            &:nth-child(5){
+                color: orange;
+            }
+            &:nth-child(6){
+                color: black;
+            }
+        }
+    }
 }
+
 
 #container{
     margin: 30px auto;
