--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -86,7 +86,29 @@ xmp,
     padding: 10px 20px;
     border: 1px solid;
     width: 100%;
+    min-height: 40px;
     box-sizing: border-box;
 }
 
-.bold{font-weight: 900;color: brown;}
+.bold{
+    font-weight: 900;
+    color: brown;
+}
+
+a{
+    text-decoration: none;
+    color: $black;
+
+    &:hover{
+        font-weight: 700;
+    }
+}
+
+.notice{
+    padding:0 10px;
+    border:1px solid #ff0000;
+    background:rgb(248, 218, 222);
+    height: 40px;
+    line-height: 40px;
+    box-sizing: border-box;
+}
