--- a/guideLine/assets/sass/layout/_contents.scss
+++ b/guideLine/assets/sass/layout/_contents.scss
@@ -31,21 +31,66 @@
                 color: red;
             }
             &:nth-child(3){
-                color: green;
-            }
-            &:nth-child(4){
-                color: blue;
-            }
-            &:nth-child(5){
                 color: orange;
             }
+            &:nth-child(4){
+                color: yellow;
+            }
+            &:nth-child(5){
+                color: green;
+            }
             &:nth-child(6){
-                color: black;
+                color: blue;
+            }
+            &:nth-child(7){
+                color: Indigo;
+            }
+            &:nth-child(8){
+                color: purple;
             }
         }
     }
 }
 
+aside{
+    &.Quick{
+        position: fixed;
+        padding-bottom: 20px;
+        border: 1px solid;
+        background: $white;
+        width: 130px;
+        height: auto;
+        bottom: 10px;
+        right: 10px;
+
+        h2{
+            text-align: center;
+
+            font : {
+                size: 18px;
+                weight: 600;
+            }
+
+            border-bottom: 2px solid $gray;
+            background: $black;
+            color: $white;
+        }
+
+        ul{
+            margin: 0 auto;
+            border: 1px solid;
+            background: $gray;
+            width: 80%;
+            
+
+            li{
+                margin: 5px;
+                text-align: left;
+                font-size: 14px;
+            }
+        }
+    }
+}
 
 #container{
     margin: 30px auto;
