--- a/guideLine/assets/sass/layout/_footer.scss
+++ b/guideLine/assets/sass/layout/_footer.scss
@@ -6,7 +6,33 @@
 
 /* Footer */
 footer {
-    border: 1px solid;
+    border-top: 2px solid;
+    background: $black;
+    color: $white;
     width: 100%;
     min-height: 100px;
+
+    article{
+        text-align: center;
+        padding: 20px;
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            li{
+                padding: 10px;
+                border: 1px solid;
+                width: 200px;
+                
+                a{
+                    color: $white;
+                }
+            }
+        }
+
+        &:first-child{
+            padding-bottom: 10px;
+        }
+    }
 }
