--- a/guideLine/html/layout/footer.html
+++ b/guideLine/html/layout/footer.html
@@ -5,7 +5,7 @@
     <article>
         <ul>
             <li><a href="tel:010-4263-1501" target="_self">  010-4263-1501 </a></li>
-            <li>메일보내기</li>
+            <li><a href="mailto:'meimi101@naver.com'"> 메일보내기 </a></li>
         </ul>
     </article>
 </section>
