--- a/guideLine/html/layout/header.html
+++ b/guideLine/html/layout/header.html
@@ -1,17 +1,12 @@
 <section>
-    <h1><a href="">What to do!?</a></h1>
+    <h1><a href="../main/index.html">What to do!?</a></h1>
     <nav id="menuList">
         <div><a href="../sub/guideline.html">GuideLine</a></div>
-        <div><a href="../sub/htm.html">Html5</a></div>
-        <div><a href="../sub/css.html">CSS</a></div>
+        <div><a href="../sub/htm.html">HTML5</a></div>
+        <div><a href="../sub/css.html">CSS3</a></div>
         <div><a href="../sub/sass.html">SASS</a></div>
         <div><a href="../sub/github.html">Git</a></div>
-        <div><a href="../sub/jquery.html">Jquery</a></div>
+        <div><a href="../sub/jquery.html">JQuery</a></div>
         <div><a href="../sub/svelte.html">Svelte</a></div>
     </nav>
-</section>
-<section>
-    <aside class="Quick">
-        퀵메뉴
-    </aside>
 </section>
